registry/ns-and-sa.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
