registry/registry_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: docker-registry
          image: registry:2.6.2
          ports:
          - name: http
            containerPort: 5000
          volumeMounts:
          - name: image-store
            mountPath: "/var/lib/registry"
          - name: auth-dir
            mountPath: /auth
      volumes:
      - name: image-store
        persistentVolumeClaim:
          claimName: registry-pvc
      - name: auth-dir
        secret: 
          secretName: registry-auth-secret
