registry/registry_svc.yml
kind: Service
apiVersion: v1
metadata:
  name: docker-registry
  namespace: dev
  labels:
    app: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
  - name: http
    port: 5000
