registry/registry_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: dev
  labels:
    version: "1.0"
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: registry-tls
      hosts:
        - registry.automation-team.ru
  rules:
  - host: registry.automation-team.ru
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-registry
          servicePort: 5000
